# fairseq

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
fairseq/: __init__.py  checkpoint_utils.py  registry.py  search.py  utils.py  version.txt
fairseq/data/: __init__.py  data_utils.py  dictionary.py  fairseq_dataset.py  iterators.py
fairseq/dataclass/: configs.py  utils.py
fairseq/distributed/: __init__.py  fully_sharded_data_parallel.py  utils.py
fairseq/logging/: metrics.py
fairseq/models/: __init__.py  fairseq_decoder.py  fairseq_incremental_decoder.py  fairseq_model.py
fairseq/models/hubert/: hubert.py
fairseq/models/wav2vec/: wav2vec2.py
fairseq/modules/: __init__.py  checkpoint_activations.py  conformer_layer.py  espnet_multihead_attention.py  fairseq_dropout.py  multihead_attention.py  rotary_positional_embedding.py  transformer_sentence_encoder.py
fairseq/optim/: __init__.py  amp_optimizer.py  fairseq_optimizer.py
fairseq/tasks/: __init__.py  fairseq_task.py  hubert_pretraining.py
